# blazediff

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  README.md  biome.json  deno.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.bundler.json  tsconfig.json
.changeset/: agent-discovery-config.md  agent-reachable-route-discovery.md  agent-review-local-judge.md  (+74 more)
apps/python-benchmark/: .gitignore  README.md  pyproject.toml
apps/python-benchmark/benchmarks/: _common.py  blazediff_bench.py  opencv_bench.py  pixelmatch_bench.py
apps/python-benchmark/scripts/: setup.sh
crates/: .gitignore  Cargo.toml  Cross.toml
crates/blazediff/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.publish  INTERPRET.md  README.md  build.rs  package.json  pyproject.toml
crates/blazediff-interpret/: Cargo.toml  Dockerfile.publish  README.md
crates/blazediff-interpret-verify/: BENCHMARKS.md  Cargo.toml  README.md
crates/blazediff-interpret-verify/src/: main.rs  manifest.rs  matching.rs  metrics.rs  report.rs  runner.rs  types.rs
crates/blazediff-interpret/scripts/: build-all.sh
crates/blazediff-interpret/src/: color_delta.rs  content_analysis.rs  gradient.rs  html_report.rs  interpretation.rs  io.rs  lib.rs  main.rs  napi.rs  severity.rs  shape.rs  spatial.rs  test_helpers.rs  types.rs
crates/blazediff-interpret/src/region/: label_extract.rs  mod.rs  morphology.rs
crates/blazediff-png/: CHANGELOG.md  Cargo.toml  Dockerfile.publish  README.md  build.rs  package.json
crates/blazediff-png-benchmark/: Cargo.toml  README.md
crates/blazediff-png-benchmark/src/: benchmark.rs  codecs.rs  main.rs  parity.rs
crates/blazediff-png/benchmarks/: simd_kernels.rs  stored_encode.rs
crates/blazediff-png/fuzz/: .gitignore  Cargo.toml  png.dict
crates/blazediff-png/fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_decode_differential.rs  fuzz_decode_format.rs  fuzz_encode16_roundtrip.rs  fuzz_encode_roundtrip.rs  fuzz_metadata_differential.rs
crates/blazediff-png/fuzz/src/: lib.rs
crates/blazediff-png/src/: chunks.rs  container.rs  convert.rs  decode.rs  defilter.rs  encode.rs  error.rs  expand.rs  format.rs  interlace.rs  lib.rs  meta.rs
crates/blazediff-png/src/backend/: mod.rs  rust.rs  shared.rs  zlib.rs
crates/blazediff-png/tests/: ancillary.rs  differential.rs  edge.rs  encode16.rs  format_differential.rs  metadata.rs  metadata_differential.rs  pngsuite.rs  roundtrip.rs  stored_rgba8.rs
crates/blazediff/fuzz/: Cargo.toml
crates/blazediff/fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_decode_differential.rs
crates/blazediff/fuzz/src/: lib.rs
crates/blazediff/scripts/: _targets.sh  build-all.sh  build-maturin.sh  build-napi.sh  build-wasm.sh  generate-spng-bindings.sh
crates/blazediff/src/: diff.rs  io.rs  jpeg_io.rs  lib.rs  main.rs  napi.rs  output.rs  python.rs  qoi_io.rs  turbojpeg_ffi.rs  types.rs  wasm.rs  yiq.rs
crates/blazediff/src/interpret/: color_delta.rs  content_analysis.rs  gradient.rs  html_report.rs  interpretation.rs  mod.rs  severity.rs  shape.rs  shifts.rs  spatial.rs  summary.rs  test_helpers.rs  types.rs
crates/blazediff/src/interpret/region/: label_extract.rs  mod.rs  morphology.rs
crates/blazediff/src/simd/: mod.rs  wasm.rs  x86.rs
crates/blazediff/wheels/: blazediff-3.1.1-cp38-abi3-macosx_10_12_x86_64.whl  blazediff-3.1.1-cp38-abi3-macosx_11_0_arm64.whl  blazediff-3.1.1-cp38-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  blazediff-3.1.1-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  blazediff-3.1.1-cp38-abi3-win_amd64.whl  blazediff-3.1.1-cp38-abi3-win_arm64.whl  blazediff-4.2.0-cp38-abi3-macosx_10_12_x86_64.whl  blazediff-4.2.0-cp38-abi3-macosx_11_0_arm64.whl  blazediff-4.2.0-cp38-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  blazediff-4.2.0-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  blazediff-4.2.0-cp38-abi3-win_amd64.whl  blazediff-4.2.0-cp38-abi3-win_arm64.whl  blazediff-4.3.0-cp38-abi3-macosx_10_12_x86_64.whl  blazediff-4.3.0-cp38-abi3-macosx_11_0_arm64.whl  blazediff-4.3.0-cp38-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  blazediff-4.3.0-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  blazediff-4.3.0-cp38-abi3-win_amd64.whl  blazediff-4.3.0-cp38-abi3-win_arm64.whl  blazediff-4.3.2-cp38-abi3-macosx_10_12_x86_64.whl  blazediff-4.3.2-cp38-abi3-macosx_11_0_arm64.whl  blazediff-4.3.2-cp38-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  blazediff-4.3.2-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  blazediff-4.3.2-cp38-abi3-win_amd64.whl  blazediff-4.3.2-cp38-abi3-win_arm64.whl  blazediff-4.3.3-cp38-abi3-macosx_10_12_x86_64.whl  blazediff-4.3.3-cp38-abi3-macosx_11_0_arm64.whl  blazediff-4.3.3-cp38-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  blazediff-4.3.3-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  blazediff-4.3.3-cp38-abi3-win_amd64.whl  blazediff-4.3.3-cp38-abi3-win_arm64.whl  blazediff-4.3.4-cp38-abi3-macosx_10_12_x86_64.whl  blazediff-4.3.4-cp38-abi3-macosx_11_0_arm64.whl  blazediff-4.3.4-cp38-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  blazediff-4.3.4-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  blazediff-4.3.4-cp38-abi3-win_amd64.whl  blazediff-4.3.4-cp38-abi3-win_arm64.whl  blazediff-5.0.0-cp38-abi3-macosx_10_12_x86_64.whl  blazediff-5.0.0-cp38-abi3-macosx_11_0_arm64.whl  blazediff-5.0.0-cp38-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  blazediff-5.0.0-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  (+20 more)
crates/interpret-validation/: BENCHMARKS.md  Cargo.toml  README.md
crates/interpret-validation/src/: main.rs
rust/: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Cross.toml  Dockerfile.publish  README.md  build.rs
rust/scripts/: build-all.sh  generate-turbojpeg-bindings.sh
rust/src/: antialiasing.rs  diff.rs  io.rs  jpeg_io.rs  lib.rs  main.rs  napi.rs  output.rs  qoi_io.rs  spng_ffi.rs  types.rs  wuffs_ffi.rs  yiq.rs
rust/src/simd/: aarch64.rs  mod.rs
rust/src/wuffs/: wuffs_png.c  wuffs_png.h
(+487 files in other folders)
