[project]
name = "blazediff-python-benchmark"
version = "0.0.0"
description = "Python image-diff benchmarks comparing blazediff, pixelmatch, and OpenCV"
requires-python = ">=3.10"
dependencies = [
    "pixelmatch>=0.3",
    "opencv-python>=4.8",
    "pillow>=10",
    "numpy>=1.26",
]

[tool.uv]
package = false

[tool.uv.sources]
# blazediff is not on PyPI yet — install the locally built wheel via:
#   pnpm build:python && uv pip install ../../crates/blazediff/dist/wheels/blazediff-*.whl
# Or use `maturin develop` from inside this venv:
#   source .venv/bin/activate && cd ../../crates/blazediff && maturin develop --release --features python
