[package]
name = "blazediff-interpret"
version = "0.1.0"
edition = "2021"
authors = ["Teimur Gasanov"]
description = "Deterministic image diff analysis: region detection, spatial positions, and severity classification"
license = "MIT"
repository = "https://github.com/teimurjan/blazediff"
keywords = ["image", "diff", "analysis", "visual-regression"]
categories = ["multimedia::images"]
build = "build.rs"
readme = "README.md"

[[bin]]
name = "blazediff-interpret"
path = "src/main.rs"

[lib]
name = "blazediff_interpret"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
blazediff = { path = "../blazediff" }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
napi = { version = "2", features = ["napi4", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }

[build-dependencies]
napi-build = "2"
