[package]
name = "blazediff"
version = "3.1.1"
edition = "2021"
authors = ["Teimur Gasanov"]
description = "High-performance image diffing with block-based optimization and SIMD"
license = "MIT"
repository = "https://github.com/teimurjan/blazediff"
keywords = ["image", "diff", "simd", "visual-regression", "screenshot"]
categories = ["multimedia::images", "command-line-utilities"]
build = "build.rs"
readme = "README.md"
include = [
    "src/**/*",
    "build.rs",
    "vendor/**/*",
    "!vendor/**/bin/**",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "blazediff"
path = "src/main.rs"

[lib]
name = "blazediff"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
memmap2 = "0.9"
qoi = "0.4"
base64 = "0.22"
napi = { version = "2", features = ["napi4", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"
napi-build = "2"
cmake = "0.1.57"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
