[package]
name = "blazediff"
version = "5.2.0"
edition = "2021"
authors = ["Teimur Gasanov"]
description = "High-performance image diffing with block-based optimization and SIMD"
license = "MIT"
repository = "https://github.com/teimurjan/blazediff"
keywords = ["image", "diff", "simd", "visual-regression", "screenshot"]
categories = ["multimedia::images", "command-line-utilities"]
build = "build.rs"
readme = "README.md"
include = [
    "src/**/*",
    "build.rs",
    "vendor/**/*",
    "!vendor/**/bin/**",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "blazediff"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "blazediff"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[features]
default = ["io", "cli"]
# Semantic diff interpretation. Pure compute over decoded buffers, so it's
# available to both the io stack and the wasm build.
interpret = []
io = [
    "interpret",
    "dep:rayon",
    "dep:memmap2",
    "dep:libc",
    "dep:blazediff-png",
]
cli = ["io", "dep:clap"]
napi = ["io", "dep:napi", "dep:napi-derive"]
python = ["io", "dep:pyo3"]
wasm = [
    "interpret",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook",
]
# Internal-only: exposes the pub(crate) spng oracle to fuzz/. Empty feature.
fuzzing = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qoi = "0.4"
base64 = "0.22"
bytemuck = "1"
clap = { version = "4", features = ["derive"], optional = true }
rayon = { version = "1.10", optional = true }
memmap2 = { version = "0.9", optional = true }
libc = { version = "0.2", optional = true }
napi = { version = "2", features = ["napi4", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38", "generate-import-lib"], optional = true }
# `version` is required to publish `blazediff` to crates.io; kept in lockstep
# with blazediff-png's version by scripts/release/sync-cargo-version.js.
blazediff-png = { path = "../blazediff-png", version = "5.2.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen pinned to match the wasm-bindgen-cli version used in build-wasm.sh.
# Bumping requires bumping both in lockstep.
wasm-bindgen = { version = "=0.2.100", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"
napi-build = "2"
cmake = "0.1.57"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
png = "0.18.1"
