[package]
name = "interpret-validation"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "interpret-validation"
path = "src/main.rs"

[dependencies]
blazediff = { path = "../blazediff" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
